--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # set to production for minified/optimized builds
 APP_ENV='development'
+APP_HMR=true
 APP_URL='http://localhost'
 APP_NAME='Budget App'
 APP_PORT=3000
