--- a/package.json
+++ b/package.json
@@ -7,16 +7,22 @@
   "scripts": {
     "clean": "rm -rf dist",
     "build:client": "webpack --config ./build/webpack.client.dev.config.js",
+    "build:client:watch": "yarn build:client --watch --watch-poll 1000 --watch-aggregate-timeout 300",
     "build:server": "webpack --config ./build/webpack.server.dev.config.js",
+    "build:server:watch": "yarn build:server --watch --watch-poll 1000 --watch-aggregate-timeout 300",
     "build": "yarn clean && yarn build:client && yarn build:server",
     "start": "node ./dist/server.js",
     "lint": "tslint -c .tslintrc.js 'src/**/*.ts'",
-    "check-types": "tsc"
+    "check-types": "tsc",
+    "watch:server": "nodemon ./dist/server.js --watch dist --ignore dist/public"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.2.5",
     "dotenv": "^6.2.0",
     "koa": "^2.6.2",
-    "plaid": "^2.10.0"
+    "koa-send": "^5.0.0",
+    "plaid": "^2.10.0",
+    "webpack-hot-middleware": "^2.24.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -28,6 +34,9 @@
     "@babel/preset-typescript": "^7.1.0",
     "@types/koa": "^2.0.48",
     "@types/koa-router": "^7.0.38",
+    "@types/koa-send": "^4.1.1",
+    "@types/koa-webpack": "^5.0.1",
+    "@types/webpack": "^4.4.23",
     "autoprefixer": "^9.4.5",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
@@ -35,13 +44,16 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "koa-router": "^7.4.0",
+    "koa-webpack": "^5.2.1",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
+    "nodemon": "^1.18.9",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.5.0",
     "prettier": "^1.15.3",
     "pug": "^2.0.3",
-    "pug-loader": "^2.4.0",
+    "pug-plain-loader": "^1.0.0",
+    "raw-loader": "^1.0.0",
     "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
@@ -51,6 +63,7 @@
     "typescript": "^3.2.4",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1",
+    "webpack-merge": "^4.2.1",
     "webpack-node-externals": "^1.7.2"
   }
 }
