--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "target": "esnext",
     // Search under node_modules for non-relative imports.
     "moduleResolution": "node",
+    "noImplicitAny": true,
     // Process & infer types from .js files.
     "allowJs": true,
     // Don't emit; allow Babel to transform files.
@@ -11,9 +12,17 @@
     // Enable strictest settings like strictNullChecks & noImplicitAny.
     "strict": true,
     // Disallow features that require cross-file information for emit.
-    "isolatedModules": true,
+    "isolatedModules": false,
     // Import non-ES modules as default imports.
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    // should match aliases in webpack config
+    "baseUrl": "./src",
+    "paths": {
+        "@/*": ["*"],
+        "@server/*": [ "server/*" ],
+        "@client/*": [ "client/*" ],
+    }
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["build", "node_modules"]
 }
