--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "start": "node ./dist/server.js",
     "lint": "tslint -c .tslintrc.js 'src/**/*.ts'",
     "check-types": "tsc",
-    "watch:server": "nodemon ./dist/server.js --watch dist --ignore dist/public"
+    "watch:server": "nodemon ./dist/server.js --watch dist --ignore dist/public",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
     "dotenv": "^6.2.0",
     "koa": "^2.6.2",
+    "koa-router": "^7.4.0",
     "koa-send": "^5.0.0",
+    "koa-webpack": "^5.2.1",
     "plaid": "^2.10.0",
     "webpack-hot-middleware": "^2.24.3"
   },
@@ -32,6 +36,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-typescript": "^7.1.0",
+    "@types/jest": "^23.3.13",
     "@types/koa": "^2.0.48",
     "@types/koa-router": "^7.0.38",
     "@types/koa-send": "^4.1.1",
@@ -43,8 +48,7 @@
     "cssnano": "^4.1.8",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "koa-router": "^7.4.0",
-    "koa-webpack": "^5.2.1",
+    "jest": "^23.6.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.9",
@@ -59,6 +63,7 @@
     "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
     "typescript": "^3.2.4",
     "webpack": "^4.28.4",
