--- a/package.json
+++ b/package.json
@@ -26,7 +26,13 @@
     "koa-send": "^5.0.0",
     "koa-webpack": "^5.2.1",
     "plaid": "^2.10.0",
-    "webpack-hot-middleware": "^2.24.3"
+    "vue": "^2.5.22",
+    "vue-class-component": "^6.3.2",
+    "vue-loader": "^15.5.1",
+    "vue-router": "^3.0.2",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.5.22",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -64,10 +70,12 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "ts-jest": "^23.10.5",
+    "ts-loader": "^5.3.3",
     "tslint": "^5.12.1",
     "typescript": "^3.2.4",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1",
+    "webpack-hot-client": "^4.1.1",
     "webpack-merge": "^4.2.1",
     "webpack-node-externals": "^1.7.2"
   }
