--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,13 @@
     // Target latest version of ECMAScript.
     "target": "esnext",
     // Search under node_modules for non-relative imports.
+    "module": "es2015",
     "moduleResolution": "node",
     "noImplicitAny": true,
     // Process & infer types from .js files.
     "allowJs": true,
     // Don't emit; allow Babel to transform files.
-    "noEmit": true,
+    // "noEmit": true,
     // Enable strictest settings like strictNullChecks & noImplicitAny.
     "strict": true,
     // Disallow features that require cross-file information for emit.
@@ -18,9 +19,9 @@
     // should match aliases in webpack config
     "baseUrl": "./src",
     "paths": {
-        "@/*": ["*"],
-        "@server/*": [ "server/*" ],
-        "@client/*": [ "client/*" ],
+      "@/*": ["*"],
+      "@server/*": ["server/*"],
+      "@client/*": ["client/*"]
     }
   },
   "include": ["src"],
