improved HMR commands and add route tests

--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "build:server:watch": "yarn build:server --watch --watch-poll 1000 --watch-aggregate-timeout 300",
     "build": "yarn clean && yarn build:client && yarn build:server",
     "start": "node ./dist/server.js",
+    "start:hot": "cross-env APP_HMR=true nodemon ./dist/server.js --watch dist --ignore dist/public",
     "lint": "tslint -c .tslintrc.js 'src/**/*.ts'",
     "check-types": "tsc",
-    "watch:server": "nodemon ./dist/server.js --watch dist --ignore dist/public",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -22,6 +22,7 @@
     "@babel/polyfill": "^7.2.5",
     "dotenv": "^6.2.0",
     "koa": "^2.6.2",
+    "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "koa-send": "^5.0.0",
     "koa-webpack": "^5.2.1",
@@ -50,6 +51,7 @@
     "@types/webpack": "^4.4.23",
     "autoprefixer": "^9.4.5",
     "babel-loader": "^8.0.5",
+    "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
     "cssnano": "^4.1.8",
     "html-loader": "^0.5.5",
@@ -69,9 +71,11 @@
     "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "supertest": "^3.4.1",
     "ts-jest": "^23.10.5",
     "ts-loader": "^5.3.3",
     "tslint": "^5.12.1",
+    "tslint-config-prettier": "^1.17.0",
     "typescript": "^3.2.4",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1",
