--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     // Search under node_modules for non-relative imports.
     "module": "es2015",
     "moduleResolution": "node",
-    "noImplicitAny": true,
+    // "noImplicitAny": true,
     // Process & infer types from .js files.
     "allowJs": true,
     // Don't emit; allow Babel to transform files.
